<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".fragments.financeiro.FinanceiroFragment">



        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="407dp"
            android:layout_height="340dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/button">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/mov_dia"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/com_de_vendas"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/dev_fiado"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/fluxo_caixa"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/contas_pagar"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/resum_ent_sai"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#151414"
            android:text="@string/resum_cart"
            android:textColor="#737272"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />


</LinearLayout>

</ScrollView>