<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    tools:context=".fragments.dialog.DateFragment"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tc_data_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:focusable="false"
            android:hint="DATA INICIAL"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tc_data_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="DATA FINAL"
            android:inputType="date"
            android:textColor="#FFFF"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioTodos"
                android:text="@string/radioTodos"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioLaboratorio"
                android:id="@+id/radioLab"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioMedicamentos"
                android:id="@+id/radioMedic"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioPerf"
                android:id="@+id/radioPerf"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioDiver"
                android:id="@+id/radioDiver"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioVarej"
                android:id="@+id/radioVarej"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botao"
            android:text="@string/continuar"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textColor="#FFFF"/>

        <Button
            android:id="@+id/btn_cancelar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao"
            android:text="@string/cancelar"
            android:textColor="#ffff"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>