<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    android:elevation="6dp"
    android:orientation="vertical"
    tools:context="view.fragments.estoque.EstoqueFragment">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="8">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_reposicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/reposicao"/>
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reposicao"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:id="@+id/btn_saidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/saidas" />

                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saidas"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lista" />
                <Button
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entradas"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lista1" />
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etiquetas"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lista2" />
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lista_de_precos"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lista3" />
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lista_de_encalhe"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/validade" />
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lista_de_validade"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/contagem" />
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lista_para_contagem"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/curva" />
                <TextView
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/curva_abc"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

</ScrollView>
